@@ -23,3 +23,4 @@ Blonk <blondak@neser.cz>
 
 Michael Jahn <mikej06@hotmail.com>
 * Kino.de movie plugin
+* FilmeVonAZ movie plugin
